# ECNU-Computer-Graphics

./: .gitignore  CMakeLists.txt  README.md  info.txt
chapter3/: CMakeLists.txt  bresenham.cpp  dda.cpp
opengl/: .clang-format  CMakeLists.txt  main.cpp  req.md
opengl/week16/: CMakeLists.txt  README.md  teapot.cpp
opengl/week3/: CMakeLists.txt  circle.cpp
pyproject/common/: color.py  geometry.py  grid.py
pyproject/test/: button.py  dda.py  layout.py  layout_btn.py
pyproject/week13/: README.md  bezier.py
pyproject/week14/: README.html  README.md  bspine.py
pyproject/week2/: bresenham.py  dda.py  grid.py  main.py  report.md  settings.py
pyproject/week3/: README.md  __init__.py  circle.py
pyproject/week4/: README.md  polygon_fill.py
pyproject/week5/: README.md  flood_fill.py  trans_2d.py
pyproject/week6/: README.md  liang.py
pyproject/week7/: README.md  suth_hodg.py  weiler.py
